// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render <GifExpertApp /> show <GifExpertApp />  1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`render <GifExpertApp /> show cant list category 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Overlord"
      key="Overlord"
    />
  </ol>
</Fragment>
`;
